--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body{
     background:var(--secondary-bg-color);
 }
 
+
 body.particles-js{
     width: 100%;
     height: 100%;
@@ -54,7 +55,7 @@ body.particles-js{
     --primary-text-color:#fff;
     --secondary-text-color:#eee;
     background-image: url("images/img1.jpg");
-    background-size: cover;
+    background-size: fill;
     background-position: 50% 50%;
     background-repeat: no-repeat;
   }
@@ -273,36 +274,71 @@ section{
 }
 
 .about .row .box:nth-child(1) .progress:nth-child(2) .bar span{
-    width: 70%;
-}
-
-.about .row .box:nth-child(1) .progress:nth-child(3) .bar span{
-    width: 60%;
-}
-
-.about .row .box:nth-child(1) .progress:nth-child(4) .bar span{
-    width: 15%;
-}
-
-.about .row .box:nth-child(1) .progress:nth-child(5) .bar span{
-    width: 50%;
-}
-
-.about .row .box:nth-child(1) .progress:nth-child(6) .bar span{
-    width: 38%;
-}
-
-.about .row .box:nth-child(2) .progress:nth-child(2) .bar span{
     width: 77%;
 }
 
+.about .row .box:nth-child(1) .progress:nth-child(3) .bar span{
+    width: 84%;
+}
+
+.about .row .box:nth-child(1) .progress:nth-child(4) .bar span{
+    width: 20%;
+}
+
+.about .row .box:nth-child(1) .progress:nth-child(5) .bar span{
+    width: 80%;
+}
+
+.about .row .box:nth-child(1) .progress:nth-child(6) .bar span{
+    width: 35%;
+}
+
+.about .row .box:nth-child(1) .progress:nth-child(7) .bar span{
+    width: 20%;
+}
+
+.about .row .box:nth-child(1) .progress:nth-child(8) .bar span{
+    width: 60%;
+}
+
+.about .row .box:nth-child(1) .progress:nth-child(9) .bar span{
+    width: 50%;
+}
+
+/*Soft Skills*/
+
+.about .row .box:nth-child(2) .progress:nth-child(2) .bar span{
+    width: 87%;
+}
+
 .about .row .box:nth-child(2) .progress:nth-child(3) .bar span{
-    width: 48%;
+    width: 80%;
 }
 
 .about .row .box:nth-child(2) .progress:nth-child(4) .bar span{
-    width: 18%;
+    width: 68%;
 }
+
+.about .row .box:nth-child(2) .progress:nth-child(5) .bar span{
+    width: 85%;
+}
+
+.about .row .box:nth-child(2) .progress:nth-child(6) .bar span{
+    width: 100%;
+}
+
+.about .row .box:nth-child(2) .progress:nth-child(7) .bar span{
+    width: 80%;
+}
+
+.about .row .box:nth-child(2) .progress:nth-child(8) .bar span{
+    width: 70%;
+}
+
+.about .row .box:nth-child(2) .progress:nth-child(9) .bar span{
+    width: 65%;
+}
+
 
 .about .row .box .exp-box{
     padding:0 1.8rem;
@@ -317,7 +353,18 @@ section{
     font-size: 2rem;
 }
 
+.about .row .box .exp-box h4{
+    color:var(--secondary-text-color);
+    font-size: 2rem;
+}
+
 .about .row .box .exp-box p{
+    color:var(--secondary-text-color);
+    font-size: 1.5rem;
+    padding:1rem 0;
+}
+
+.about .row .box .exp-box li{
     color:var(--secondary-text-color);
     font-size: 1.5rem;
     padding:1rem 0;
